--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,19 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_edit"
+        android:icon="@drawable/ic_mode_edit_black_24dp"
+        android:title="action_edit"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/ic_delete_forever_black_24dp"
+        android:title="action_delete"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_register"
+        android:icon="@drawable/ic_done_black_24dp"
+        android:title="action_register"
+        app:showAsAction="ifRoom" />
 </menu>
