--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,16 +10,16 @@
     <item
         android:id="@+id/action_edit"
         android:icon="@drawable/ic_mode_edit_black_24dp"
-        android:title="action_edit"
+        android:title="@string/action_edit"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_delete_forever_black_24dp"
-        android:title="action_delete"
+        android:title="@string/action_delete"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_register"
         android:icon="@drawable/ic_done_black_24dp"
-        android:title="action_register"
+        android:title="@string/action_register"
         app:showAsAction="ifRoom" />
 </menu>
