open EditFragment, set up EditFragment

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -54,7 +54,7 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/diaeyContentEdit"
+                android:id="@+id/diaryContentEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="日記はこんな感じに表示される" />
