--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -49,15 +49,13 @@
 
         </LinearLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
+            android:id="@+id/diaryContentEdit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/diaryContentEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="日記はこんな感じに表示される" />
-        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
